<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/StartControllerTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/start"
            android:freezesText="true"
            android:onClick="startLocationUpdates"/>
        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/StartControllerTrip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/material_blue_grey_800"/>

        <TextView
            android:id="@+id/LastLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/StartControllerTrip"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/lastlocation"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LastLocation"
            android:layout_alignParentStart="true"
            android:text="@string/location"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/StartValueLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Location"
            android:layout_centerHorizontal="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/unknown"
            android:freezesText="true"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/StartTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/StartValueLocation"
            android:layout_alignParentStart="true"
            android:text="@string/time"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/StartValueTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/StartTextTime"
            android:layout_centerHorizontal="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/time_format"
            android:freezesText="true"
            android:textSize="20sp"/>

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/StartValueTime"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/material_blue_grey_800"/>

        <Button
            android:id="@+id/EndControllerTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/StartValueTime"
            android:text="@string/end"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:onClick="endTrip"/>

        <View
            android:id="@+id/separator3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/EndControllerTrip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/material_blue_grey_800"/>

        <Button
            android:id="@+id/Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/separator3"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="Logout"
            android:onClick="Log_Out"/>

        <View
            android:id="@+id/separator4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/Logout"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:background="@color/material_blue_grey_800"/>

    </RelativeLayout>
</ScrollView>